--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   output-dir: docs
   render:
     - "*.qmd"
+    - "*.pdf"
 
 execute:
   freeze: true
@@ -13,6 +14,10 @@ website:
     left:
       - href: index.qmd
         text: Home
+    tools:
+      - icon: github
+        href: https://github.com/psicostat/multiverseRworkshop
+        text: GitHub
 
 author:
   - name: "Giulia Calignano"
